fixed some safari alignment bugs

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -114,6 +114,10 @@ button {
     border-radius: 8px;
     background: #fff;
 
+    input {
+      line-height: normal; // safari fix
+    }
+
     .MuiOutlinedInput-root {
       border-radius: inherit;
     }
