--- a/src/styles/header-homescreen.scss
+++ b/src/styles/header-homescreen.scss
@@ -58,6 +58,7 @@
     @media (min-width: $md) {
       display: flex;
       justify-content: space-between;
+      align-items: flex-start; // safari fix
       margin-bottom: 50px;
     }
 
